--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>fp-block-game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div style="text-align: center">
+      <a href="https://github.com/afrontend/fp-block-game" title="fp-block-game">
+        <img class="logo" style="width:20px;height:20px;" src="https://agvim.files.wordpress.com/2015/08/github-mark-32px.png?w=685" alt="https://github.com/afrontend/fp-block-game">
+      </a>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
